update readme and add date cleaning

--- a/no-heat/notebooks/clean-addresses-dates.ipynb
+++ b/no-heat/notebooks/clean-addresses-dates.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 174,
    "id": "874d84c5-34c2-4611-9393-de35f7f1d531",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 175,
    "id": "ab1ee285-7f84-4071-a31f-a8f6e9dd7cbd",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 176,
    "id": "da85dadb-4978-4425-b991-1c3072d35a8d",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 177,
    "id": "38382649-41a9-4601-bcc0-ad0725f81578",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "16578                    NaN    NaN  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 178,
    "id": "2e168fea-8b57-4f06-81db-cbcc111bd1dc",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 179,
    "id": "8c628e41-5367-432b-a4e2-b302cf08b79d",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 180,
    "id": "c923cb3e-daa0-4ac0-bb09-1b380ce770c4",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 181,
    "id": "1cba9feb-f6ba-4586-9cd5-c7899a523fa2",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 182,
    "id": "c6f6405d-a4e2-4a54-babb-42f0f543defe",
    "metadata": {},
    "outputs": [
@@ -274,8 +274,6 @@
        "      <th>street_address</th>\n",
        "      <th>address_1</th>\n",
        "      <th>address_2</th>\n",
-       "      <th>zipcode</th>\n",
-       "      <th>apt_num</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -289,8 +287,6 @@
        "      <td>860 N DEWITT PL</td>\n",
        "      <td>1704</td>\n",
        "      <td>Chicago Illinois 60611</td>\n",
-       "      <td>60611</td>\n",
-       "      <td>1704 Chicago Illinois 60611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16574</th>\n",
@@ -301,8 +297,6 @@
        "      <td></td>\n",
        "      <td>10437 S HALE AVE</td>\n",
        "      <td>Chicago Illinois 60643</td>\n",
-       "      <td></td>\n",
-       "      <td>60643</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -315,8 +309,6 @@
        "      <td>860 N DEWITT PL</td>\n",
        "      <td>Apt 1502</td>\n",
        "      <td>Chicago Illinois 60611</td>\n",
-       "      <td>60611</td>\n",
-       "      <td>Apt 1502 Chicago Illinois 60611</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16576</th>\n",
@@ -327,8 +319,6 @@
        "      <td></td>\n",
        "      <td>7311 S EAST  END AVE</td>\n",
        "      <td>Chicago Illinois 60649</td>\n",
-       "      <td></td>\n",
-       "      <td>60649</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -341,8 +331,6 @@
        "      <td>611 W BRIAR PL</td>\n",
        "      <td>103</td>\n",
        "      <td>Chicago Illinois 60657</td>\n",
-       "      <td>60657</td>\n",
-       "      <td>103 Chicago Illinois 60657</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -370,22 +358,15 @@
        "16576                   Open         7311 S EAST  END AVE   \n",
        "16577                   Open               611 W BRIAR PL   \n",
        "\n",
-       "                    address_1               address_2 zipcode  \\\n",
-       "16573                    1704  Chicago Illinois 60611   60611   \n",
-       "16574  Chicago Illinois 60643                           60643   \n",
-       "16575                Apt 1502  Chicago Illinois 60611   60611   \n",
-       "16576  Chicago Illinois 60649                           60649   \n",
-       "16577                     103  Chicago Illinois 60657   60657   \n",
-       "\n",
-       "                               apt_num  \n",
-       "16573      1704 Chicago Illinois 60611  \n",
-       "16574                                   \n",
-       "16575  Apt 1502 Chicago Illinois 60611  \n",
-       "16576                                   \n",
-       "16577       103 Chicago Illinois 60657  "
+       "                    address_1               address_2  \n",
+       "16573                    1704  Chicago Illinois 60611  \n",
+       "16574  Chicago Illinois 60643                          \n",
+       "16575                Apt 1502  Chicago Illinois 60611  \n",
+       "16576  Chicago Illinois 60649                          \n",
+       "16577                     103  Chicago Illinois 60657  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 183,
    "id": "cbc62c51-9b04-4f94-b4d0-989b894434fa",
    "metadata": {},
    "outputs": [],
@@ -415,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 184,
    "id": "7cb44d63-6c82-4981-a971-152deef614a2",
    "metadata": {},
    "outputs": [],
@@ -450,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 185,
    "id": "4f7a2a2d-4f43-4f51-877c-c3af715a257f",
    "metadata": {},
    "outputs": [],
@@ -461,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 186,
    "id": "f2b4cf11-abd8-4db4-9b4f-1bb07fa22ad1",
    "metadata": {},
    "outputs": [
@@ -605,7 +586,7 @@
        "16577       103 Chicago Illinois 60657  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 187,
    "id": "9164f77c-733e-441d-89fe-a4d9284114a5",
    "metadata": {},
    "outputs": [
@@ -624,9 +605,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_38724/400239471.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/tmp/ipykernel_38724/3752851929.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df['apt_num'] = df['apt_num'].str.replace(pattern, '')\n",
-      "/tmp/ipykernel_38724/400239471.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/tmp/ipykernel_38724/3752851929.py:9: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df['apt_num'] = df['apt_num'].str.replace(pattern, '')\n"
      ]
     }
@@ -645,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 188,
    "id": "6c3e8bad-0615-47e1-af20-e1ca96a3550c",
    "metadata": {},
    "outputs": [
@@ -694,7 +675,7 @@
        "      <td>1704</td>\n",
        "      <td>Chicago Illinois 60611</td>\n",
        "      <td>60611</td>\n",
-       "      <td>1704</td>\n",
+       "      <td>1704 Chicago Illinois</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16574</th>\n",
@@ -707,7 +688,7 @@
        "      <td>Chicago Illinois 60643</td>\n",
        "      <td></td>\n",
        "      <td>60643</td>\n",
-       "      <td></td>\n",
+       "      <td>Chicago Illinois</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16575</th>\n",
@@ -720,7 +701,7 @@
        "      <td>Apt 1502</td>\n",
        "      <td>Chicago Illinois 60611</td>\n",
        "      <td>60611</td>\n",
-       "      <td>Apt 1502</td>\n",
+       "      <td>Apt 1502 Chicago Illinois</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16576</th>\n",
@@ -733,7 +714,7 @@
        "      <td>Chicago Illinois 60649</td>\n",
        "      <td></td>\n",
        "      <td>60649</td>\n",
-       "      <td></td>\n",
+       "      <td>Chicago Illinois</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16577</th>\n",
@@ -746,7 +727,7 @@
        "      <td>103</td>\n",
        "      <td>Chicago Illinois 60657</td>\n",
        "      <td>60657</td>\n",
-       "      <td>103</td>\n",
+       "      <td>103 Chicago Illinois</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -774,15 +755,22 @@
        "16576                   Open         7311 S EAST  END AVE   \n",
        "16577                   Open               611 W BRIAR PL   \n",
        "\n",
-       "                    address_1               address_2 zipcode    apt_num  \n",
-       "16573                    1704  Chicago Illinois 60611   60611      1704   \n",
-       "16574  Chicago Illinois 60643                           60643             \n",
-       "16575                Apt 1502  Chicago Illinois 60611   60611  Apt 1502   \n",
-       "16576  Chicago Illinois 60649                           60649             \n",
-       "16577                     103  Chicago Illinois 60657   60657       103   "
+       "                    address_1               address_2 zipcode  \\\n",
+       "16573                    1704  Chicago Illinois 60611   60611   \n",
+       "16574  Chicago Illinois 60643                           60643   \n",
+       "16575                Apt 1502  Chicago Illinois 60611   60611   \n",
+       "16576  Chicago Illinois 60649                           60649   \n",
+       "16577                     103  Chicago Illinois 60657   60657   \n",
+       "\n",
+       "                          apt_num  \n",
+       "16573      1704 Chicago Illinois   \n",
+       "16574          Chicago Illinois    \n",
+       "16575  Apt 1502 Chicago Illinois   \n",
+       "16576          Chicago Illinois    \n",
+       "16577       103 Chicago Illinois   "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "id": "941d3071-de22-4866-8f7a-9544c9685cd6",
    "metadata": {},
    "outputs": [],
@@ -810,16 +798,16 @@
     "df['datetime_opened'] = pd.to_datetime(df['Date/Time Opened'])\n",
     "\n",
     "# create a year opened col\n",
-    "df['year'] = data['datetime_opened'].dt.year\n",
+    "df['year'] = df['datetime_opened'].dt.year\n",
     "\n",
     "# create a month_year col\n",
-    "df['month_year'] = data['datetime_opened'].dt.strftime('%m/%Y')\n",
+    "df['month_year'] = df['datetime_opened'].dt.strftime('%m/%Y')\n",
     "\n",
     "# create a date col\n",
-    "df['date'] = data['datetime_opened'].dt.strftime('%Y-%m-%d')\n",
+    "df['date'] = df['datetime_opened'].dt.strftime('%Y-%m-%d')\n",
     "\n",
     "# create an hour col\n",
-    "df['hour'] = data['datetime_opened'].dt.strftime('%H')"
+    "df['hour'] = df['datetime_opened'].dt.strftime('%H')"
    ]
   },
   {
@@ -832,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 190,
    "id": "011c04fb-1554-4072-b4a6-9ffb4db41c9b",
    "metadata": {},
    "outputs": [],
@@ -848,13 +836,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 191,
+   "id": "83eedb07-3d14-422b-a9ae-9db2f7a3247a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SR Number</th>\n",
+       "      <th>Date/Time Opened</th>\n",
+       "      <th>Service Request Address</th>\n",
+       "      <th>Service Request Status</th>\n",
+       "      <th>Answer</th>\n",
+       "      <th>street_address</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>apt_num</th>\n",
+       "      <th>datetime_opened</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month_year</th>\n",
+       "      <th>date</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SR18-00198455</td>\n",
+       "      <td>12/19/18 02:53 PM</td>\n",
+       "      <td></td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>No Cause</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2018-12-19 14:53:00</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>12/2018</td>\n",
+       "      <td>2018-12-19</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Illinois</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SR19-01043676</td>\n",
+       "      <td>02/20/19 01:40 PM</td>\n",
+       "      <td>1135 N Harlem AVE&lt;br&gt;  60302</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>No Cause</td>\n",
+       "      <td>1135 N Harlem AVE</td>\n",
+       "      <td>60302</td>\n",
+       "      <td></td>\n",
+       "      <td>2019-02-20 13:40:00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>02/2019</td>\n",
+       "      <td>2019-02-20</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Illinois</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SR19-01047333</td>\n",
+       "      <td>02/21/19 08:56 AM</td>\n",
+       "      <td>18231 S Sayre AVE&lt;br&gt;  60477</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>No Cause</td>\n",
+       "      <td>18231 S Sayre AVE</td>\n",
+       "      <td>60477</td>\n",
+       "      <td></td>\n",
+       "      <td>2019-02-21 08:56:00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>02/2019</td>\n",
+       "      <td>2019-02-21</td>\n",
+       "      <td>08</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Illinois</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SR19-01050631</td>\n",
+       "      <td>02/21/19 03:29 PM</td>\n",
+       "      <td>6726 N SHERIDAN RD&lt;br&gt;  60626</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>Processed for Hearing - Standard</td>\n",
+       "      <td>6726 N SHERIDAN RD</td>\n",
+       "      <td>60626</td>\n",
+       "      <td></td>\n",
+       "      <td>2019-02-21 15:29:00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>02/2019</td>\n",
+       "      <td>2019-02-21</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Illinois</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SR19-01058995</td>\n",
+       "      <td>02/23/19 11:35 AM</td>\n",
+       "      <td>2746 N 74th AVE&lt;br&gt;  60707</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>No Cause</td>\n",
+       "      <td>2746 N 74th AVE</td>\n",
+       "      <td>60707</td>\n",
+       "      <td></td>\n",
+       "      <td>2019-02-23 11:35:00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>02/2019</td>\n",
+       "      <td>2019-02-23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Illinois</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       SR Number   Date/Time Opened        Service Request Address  \\\n",
+       "0  SR18-00198455  12/19/18 02:53 PM                                  \n",
+       "1  SR19-01043676  02/20/19 01:40 PM   1135 N Harlem AVE<br>  60302   \n",
+       "2  SR19-01047333  02/21/19 08:56 AM   18231 S Sayre AVE<br>  60477   \n",
+       "3  SR19-01050631  02/21/19 03:29 PM  6726 N SHERIDAN RD<br>  60626   \n",
+       "4  SR19-01058995  02/23/19 11:35 AM     2746 N 74th AVE<br>  60707   \n",
+       "\n",
+       "  Service Request Status                            Answer  \\\n",
+       "0              Completed                          No Cause   \n",
+       "1              Completed                          No Cause   \n",
+       "2              Completed                          No Cause   \n",
+       "3              Completed  Processed for Hearing - Standard   \n",
+       "4              Completed                          No Cause   \n",
+       "\n",
+       "       street_address zipcode apt_num     datetime_opened  year month_year  \\\n",
+       "0                                     2018-12-19 14:53:00  2018    12/2018   \n",
+       "1   1135 N Harlem AVE   60302         2019-02-20 13:40:00  2019    02/2019   \n",
+       "2   18231 S Sayre AVE   60477         2019-02-21 08:56:00  2019    02/2019   \n",
+       "3  6726 N SHERIDAN RD   60626         2019-02-21 15:29:00  2019    02/2019   \n",
+       "4     2746 N 74th AVE   60707         2019-02-23 11:35:00  2019    02/2019   \n",
+       "\n",
+       "         date hour     city     state  \n",
+       "0  2018-12-19   14  Chicago  Illinois  \n",
+       "1  2019-02-20   13  Chicago  Illinois  \n",
+       "2  2019-02-21   08  Chicago  Illinois  \n",
+       "3  2019-02-21   15  Chicago  Illinois  \n",
+       "4  2019-02-23   11  Chicago  Illinois  "
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
    "id": "0f9f5624-9aa4-4d16-bab0-2bb5570f28f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../data/processed/cleaned_complaints.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0530d133-57e0-46a6-a890-c8a84e5fb75c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
